--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,11 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  overscroll-behavior: none;
+}
+
 /* Custom scrollbar */
 ::-webkit-scrollbar {
   width: 8px;
