--- a/src/app.css
+++ b/src/app.css
@@ -14,16 +14,23 @@ body {
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
+  -webkit-appearance: none;
+}
+
+:root {
+  color-scheme: dark light;
 }
 
 ::-webkit-scrollbar-track {
   @apply bg-slate-100 dark:bg-slate-800;
+  background-color: #1e293b; /* slate-800 */
 }
 
 ::-webkit-scrollbar-thumb {
   @apply bg-slate-300 dark:bg-slate-600 rounded-full;
   border: 2px solid transparent;
   background-clip: content-box;
+  background-color: #475569; /* slate-600 */
 }
 
 ::-webkit-scrollbar-thumb:hover {
