--- a/src/app.css
+++ b/src/app.css
@@ -2,62 +2,63 @@
 @plugin "daisyui";
 
 html {
-    @apply bg-slate-50 dark:bg-slate-900;
-    scroll-behavior: smooth;
+  @apply bg-slate-50 dark:bg-slate-900;
+  scroll-behavior: smooth;
+  scrollbar-gutter: auto !important;
 }
 
 html,
 body {
-    overscroll-behavior: none;
+  overscroll-behavior: none;
 }
 
 /* Custom scrollbar */
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    -webkit-appearance: none;
+  width: 8px;
+  height: 8px;
+  -webkit-appearance: none;
 }
 
 :root {
-    color-scheme: dark light;
+  color-scheme: dark light;
 }
 
 ::-webkit-scrollbar-track {
-    @apply bg-slate-100 dark:bg-slate-800;
-    background-color: #1e293b;
-    /* slate-800 */
+  @apply bg-slate-100 dark:bg-slate-800;
+  background-color: #1e293b;
+  /* slate-800 */
 }
 
 ::-webkit-scrollbar-thumb {
-    @apply rounded-full bg-slate-300 dark:bg-slate-600;
-    border: 2px solid transparent;
-    background-clip: content-box;
-    background-color: #475569;
-    /* slate-600 */
+  @apply rounded-full bg-slate-300 dark:bg-slate-600;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  background-color: #475569;
+  /* slate-600 */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    @apply bg-slate-400 dark:bg-slate-500;
+  @apply bg-slate-400 dark:bg-slate-500;
 }
 
-.btn {
-    @apply flex cursor-pointer items-center justify-center gap-2 rounded-xl px-8 py-4 text-lg shadow-sm transition-all hover:shadow-md;
+/* .btn {
+  @apply flex cursor-pointer items-center justify-center gap-2 rounded-xl px-8 py-4 text-lg shadow-sm transition-all hover:shadow-md;
 }
 
 .btn-default {
-    @apply border border-slate-200 bg-white text-slate-800 hover:bg-slate-50 active:bg-slate-100 dark:border-slate-600 dark:bg-slate-700 dark:text-slate-200 dark:hover:bg-slate-600 dark:active:bg-slate-500;
+  @apply border border-slate-200 bg-white text-slate-800 hover:bg-slate-50 active:bg-slate-100 dark:border-slate-600 dark:bg-slate-700 dark:text-slate-200 dark:hover:bg-slate-600 dark:active:bg-slate-500;
 }
 
 .btn-primary {
-    @apply bg-blue-500 text-white hover:bg-blue-600 active:bg-blue-700;
+  @apply bg-blue-500 text-white hover:bg-blue-600 active:bg-blue-700;
 }
 
 .btn-tab {
-    @apply flex cursor-pointer items-center gap-2 rounded-lg px-4 py-2 text-sm font-medium transition-colors;
-    @apply bg-transparent text-slate-500 hover:bg-slate-100 dark:hover:bg-slate-700;
+  @apply flex cursor-pointer items-center gap-2 rounded-lg px-4 py-2 text-sm font-medium transition-colors;
+  @apply bg-transparent text-slate-500 hover:bg-slate-100 dark:hover:bg-slate-700;
 }
 
 .btn-tab-active {
-    @apply bg-blue-50 text-blue-600 dark:bg-blue-900/20 dark:text-blue-400;
-    @apply hover:bg-blue-100 dark:hover:bg-blue-900/30;
-}
+  @apply bg-blue-50 text-blue-600 dark:bg-blue-900/20 dark:text-blue-400;
+  @apply hover:bg-blue-100 dark:hover:bg-blue-900/30;
+} */
