--- a/src/app.css
+++ b/src/app.css
@@ -62,7 +62,7 @@ body {
 }
 
 .btn-primary {
-  @apply bg-blue-500 text-white hover:bg-blue-600 active:bg-blue-700;
+  @apply bg-cyan-500 text-white hover:bg-cyan-600 active:bg-cyan-700;
 }
 
 .btn-tab {
@@ -71,6 +71,6 @@ body {
 }
 
 .btn-tab-active {
-  @apply bg-blue-50 text-blue-600 dark:bg-blue-900/20 dark:text-blue-400;
-  @apply hover:bg-blue-100 dark:hover:bg-blue-900/30;
+  @apply bg-cyan-50 text-cyan-600 dark:bg-cyan-900/20 dark:text-cyan-400;
+  @apply hover:bg-cyan-100 dark:hover:bg-cyan-900/30;
 } */
